--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,12 @@
-set(MAIN_SOURCES main.cpp)
+add_subdirectory(common)
+add_subdirectory(lib)
+if(ENABLE_FILE_INPUT)
+  add_subdirectory(file_input)
+endif()
 
+set(MAIN_SOURCES main.cpp)
 add_executable(monitor ${MAIN_SOURCES})
-target_link_libraries(monitor CONAN_PKG::abseil CONAN_PKG::boost CONAN_PKG::fmt)
+target_link_libraries(monitor PRIVATE formula CONAN_PKG::fmt)
+if(ENABLE_FILE_INPUT)
+  target_link_libraries(monitor PRIVATE parser)
+endif()
