File input parsing + monitor execution

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,14 @@
 add_subdirectory(common)
-add_subdirectory(lib)
+add_subdirectory(operators)
+add_subdirectory(input_formula)
+add_subdirectory(monitor)
 if(ENABLE_FILE_INPUT)
   add_subdirectory(file_input)
 endif()
 
-set(MAIN_SOURCES main.cpp)
-add_executable(monitor ${MAIN_SOURCES})
-target_link_libraries(monitor PRIVATE formula CONAN_PKG::fmt)
+set(STATICMON_SOURCES staticmon.cpp)
+add_executable(staticmon ${STATICMON_SOURCES})
+target_link_libraries(staticmon PRIVATE formula CONAN_PKG::fmt CONAN_PKG::abseil)
 if(ENABLE_FILE_INPUT)
-  target_link_libraries(monitor PRIVATE parser)
+  target_link_libraries(staticmon PRIVATE file_driver)
 endif()
