--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,4 +1,7 @@
+configure_file(config.h.in config.h @ONLY)
+
 set(COMMON_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
-add_library(common INTERFACE)
-target_include_directories(common INTERFACE ${COMMON_INCLUDES})
-target_link_libraries(common INTERFACE CONAN_PKG::boost CONAN_PKG::fmt CONAN_PKG::abseil)
+set(COMMON_SOURCES util.cpp)
+add_library(common STATIC ${COMMON_SOURCES})
+target_include_directories(common PUBLIC ${COMMON_INCLUDES})
+target_link_libraries(common CONAN_PKG::boost CONAN_PKG::fmt CONAN_PKG::abseil)
