--- a/src/file_input/CMakeLists.txt
+++ b/src/file_input/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_subdirectory(parser)
 
-set(FILE_DRIVER_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
-add_library(file_driver INTERFACE)
-target_include_directories(file_driver INTERFACE ${FILE_DRIVER_INCLUDES})
-target_link_libraries(file_driver INTERFACE formula monitor parser)
+add_library(file_driver STATIC deps.cpp)
+target_include_directories(file_driver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(file_driver formula monitor parser)
