--- a/src/monitor/CMakeLists.txt
+++ b/src/monitor/CMakeLists.txt
@@ -1,4 +1,11 @@
-set(MONITOR_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
-add_library(monitor INTERFACE)
-target_include_directories(monitor INTERFACE ${MONITOR_INCLUDES})
-target_link_libraries(monitor INTERFACE common operators CONAN_PKG::abseil CONAN_PKG::fmt CONAN_PKG::boost)
+set(MONITOR_SOURCES deps.cpp monitor.cpp)
+add_library(monitor STATIC ${MONITOR_SOURCES})
+target_include_directories(monitor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(
+  monitor
+  formula
+  common
+  operators
+  CONAN_PKG::abseil
+  CONAN_PKG::fmt
+  CONAN_PKG::boost)
