--- a/src/file_input/parser/CMakeLists.txt
+++ b/src/file_input/parser/CMakeLists.txt
@@ -1,7 +1,6 @@
 set(PARSER_SOURCES trace_parser.cpp)
-set(PARSER_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 add_library(parser STATIC ${PARSER_SOURCES})
-target_include_directories(parser PUBLIC ${PARSER_INCLUDES})
+target_include_directories(parser PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(
   parser
   common
