file_monitor_driver: split header and source

--- a/src/file_input/CMakeLists.txt
+++ b/src/file_input/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(parser)
 
-add_library(file_driver STATIC deps.cpp)
+set(FILE_DRIVER_SOURCES deps.cpp file_monitor_driver.cpp)
+add_library(file_driver STATIC ${FILE_DRIVER_SOURCES})
 target_include_directories(file_driver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(file_driver formula monitor parser)
