Optimize compilation time (header only)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,7 @@
-add_subdirectory(common)
-add_subdirectory(operators)
-add_subdirectory(input_formula)
-add_subdirectory(monitor)
-if(ENABLE_FILE_INPUT)
-  add_subdirectory(file_input)
-endif()
-
+configure_file(config.h.in config.h @ONLY)
 set(STATICMON_SOURCES staticmon.cpp)
 add_executable(staticmon ${STATICMON_SOURCES})
-target_link_libraries(staticmon PRIVATE CONAN_PKG::fmt CONAN_PKG::abseil)
-if(ENABLE_FILE_INPUT)
-  target_link_libraries(staticmon PRIVATE file_driver)
-endif()
+target_include_directories(staticmon PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
+                                             ${CMAKE_CURRENT_BINARY_DIR})
+target_link_libraries(staticmon PRIVATE CONAN_PKG::fmt CONAN_PKG::abseil
+                                        foonathan::lexy)
