Test and Benchmark framework

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ src/input_formula/formula_in.h
 test/test_runner/dist-newstyle
 configure.sh
 profile
+experiments/runner/dist-newstyle
+src/staticmon/input_formula/formula_in.h
+experiments/runner/out.csv
+src/staticmon/input_formula/formula_csts.h
