--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,11 @@ set(STATICMON_SOURCES staticmon.cpp)
 add_executable(staticmon ${STATICMON_SOURCES})
 target_include_directories(staticmon PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
                                              ${CMAKE_CURRENT_BINARY_DIR})
-target_link_libraries(staticmon PRIVATE CONAN_PKG::boost CONAN_PKG::fmt
-                                        CONAN_PKG::abseil foonathan::lexy)
+if(USE_JEMALLOC)
+  target_link_libraries(staticmon CONAN_PKG::jemalloc)
+endif()
+target_link_libraries(staticmon CONAN_PKG::boost CONAN_PKG::fmt
+                      CONAN_PKG::abseil foonathan::lexy)
 target_compile_options(staticmon PRIVATE -Wall -Wextra -Wconversion
                                          -Wsign-conversion)
 if(ENABLE_TRACE_TIME)
