--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ experiments/runner/dist-newstyle
 src/staticmon/input_formula/formula_in.h
 experiments/runner/out.csv
 src/staticmon/input_formula/formula_csts.h
+experiments/runner/test-runner.hp
+experiments/runner/test-runner.eventlog_old.html
+experiments/runner/test-runner.eventlog.html
+experiments/runner/test-runner.eventlog
+experiments/runner/test-runner.hp.html
+experiments/runner/test-runner.hp_old.html
