--- a/experiments/runner/test-runner.cabal
+++ b/experiments/runner/test-runner.cabal
@@ -28,6 +28,10 @@ executable test-runner
     , text                   >=2.0      && <2.0.1
     , vector                 ^>=0.12.3.1
 
+  ghc-options:
+    -rtsopts
+    -fno-full-laziness
+
   hs-source-dirs:     app lib
   default-language:   GHC2021
   default-extensions:
