--- a/experiments/runner/test-runner.cabal
+++ b/experiments/runner/test-runner.cabal
@@ -20,7 +20,7 @@ executable test-runner
   build-depends:
     , aeson                  ^>=2.0.3.0
     , attoparsec             ^>=0.14.4
-    , base                   ^>=4.16.1.0
+    , base                   ^>=4.14.3.0
     , cassava                ^>=0.5.2.0
     , containers             ^>=0.6.5.1
     , fmt                    ^>=0.6.3.0
@@ -36,9 +36,48 @@ executable test-runner
 
   ghc-options:        -rtsopts -fno-full-laziness
   hs-source-dirs:     app lib
-  default-language:   GHC2021
+  default-language:   Haskell2010
   default-extensions:
+    BangPatterns
+    BinaryLiterals
+    ConstrainedClassMethods
+    ConstraintKinds
+    DeriveDataTypeable
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DoAndIfThenElse
+    EmptyCase
+    EmptyDataDeriving
+    ExistentialQuantification
+    ExplicitForAll
     ExtendedDefaultRules
+    FlexibleContexts
+    FlexibleInstances
+    ForeignFunctionInterface
+    GADTSyntax
+    GeneralisedNewtypeDeriving
+    HexFloatLiterals
+    ImportQualifiedPost
+    InstanceSigs
+    KindSignatures
     LambdaCase
+    MultiParamTypeClasses
+    NamedFieldPuns
+    NamedWildCards
+    NumericUnderscores
     OverloadedStrings
+    PolyKinds
+    PostfixOperators
+    RankNTypes
     RecordWildCards
+    ScopedTypeVariables
+    StandaloneDeriving
+    StandaloneKindSignatures
+    TraditionalRecordSyntax
+    TupleSections
+    TypeApplications
+    TypeOperators
+    TypeSynonymInstances
