--- a/experiments/runner/test-runner.cabal
+++ b/experiments/runner/test-runner.cabal
@@ -18,7 +18,7 @@ executable test-runner
     TestRunner
 
   build-depends:
-    , aeson                  ^>=2.0.3.0
+    , aeson                  ^>=2.1.0.0
     , attoparsec             ^>=0.14.4
     , base                   ^>=4.14.3.0
     , cassava                ^>=0.5.2.0
@@ -32,9 +32,10 @@ executable test-runner
     , shelly                 >=1.10.0   && <1.10.1
     , terminal-progress-bar  >=0.4.1    && <0.4.2
     , text                   >=2.0      && <2.0.1
-    , vector                 ^>=0.12.3.1
+    , uuid                   ^>=1.3.15
+    , vector                 ^>=0.13.0.0
 
-  ghc-options:        -rtsopts -fno-full-laziness
+  ghc-options:        -rtsopts -fno-full-laziness -threaded
   hs-source-dirs:     app lib
   default-language:   Haskell2010
   default-extensions:
