--- a/experiments/runner/test-runner.cabal
+++ b/experiments/runner/test-runner.cabal
@@ -12,8 +12,8 @@ executable test-runner
     EventPrinting
     Flags
     Monitors
+    Process
     RandomTestRunner
-    Shelly.Helpers
     SignatureParser
     TestRunner
 
@@ -22,20 +22,26 @@ executable test-runner
     , attoparsec             ^>=0.14.4
     , base                   ^>=4.14.3.0
     , cassava                ^>=0.5.2.0
+    , clock                  ^>=0.8.3
+    , concurrent-extra       ^>=0.7.0.12
     , containers             ^>=0.6.5.1
+    , directory              ^>=1.3.7.0
+    , either                 ^>=5.0.2
+    , extra
+    , filepath
     , fmt                    ^>=0.6.3.0
-    , lifted-async           ^>=0.10.2.2
-    , lifted-base            ^>=0.2.3.12
-    , mtl                    ^>=2.3
+    , mtl                    ^>=2.2.2
     , optparse-applicative   ^>=0.17.0.0
     , random                 ^>=1.2.1.1
-    , shelly                 >=1.10.0   && <1.10.1
+    , resourcet              ^>=1.2.6
     , terminal-progress-bar  >=0.4.1    && <0.4.2
     , text                   >=2.0      && <2.0.1
+    , typed-process          ^>=0.2.10.1
+    , unliftio               ^>=0.2.22.0
     , uuid                   ^>=1.3.15
     , vector                 ^>=0.13.0.0
 
-  ghc-options:        -rtsopts -fno-full-laziness -threaded
+  ghc-options:        -rtsopts -fno-full-laziness -threaded -W -Wextra
   hs-source-dirs:     app lib
   default-language:   Haskell2010
   default-extensions:
