--- a/experiments/runner/test-runner.cabal
+++ b/experiments/runner/test-runner.cabal
@@ -33,6 +33,7 @@ executable test-runner
     , mtl                    ^>=2.2.2
     , optparse-applicative   ^>=0.17.0.0
     , random                 ^>=1.2.1.1
+    , regex-tdfa             ^>=1.3.1.2
     , resourcet              ^>=1.2.6
     , terminal-progress-bar  >=0.4.1    && <0.4.2
     , text                   >=2.0      && <2.0.1
