--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ experiments/runner/out.sig
 experiments/runner/stderr
 experiments/runner/out.old.mfotl
 experiments/runner/out.old.sig
+experiments/runner/sig
