--- a/experiments/runner/test-runner.cabal
+++ b/experiments/runner/test-runner.cabal
@@ -30,18 +30,19 @@ executable test-runner
     , extra
     , filepath
     , fmt                    ^>=0.6.3.0
-    , mtl                    ^>=2.2.2
+    , mtl                    ^>=2.3
     , optparse-applicative   ^>=0.17.0.0
     , random                 ^>=1.2.1.1
     , random-fu              ^>=0.3.0.0
     , regex-tdfa             ^>=1.3.1.2
     , resourcet              ^>=1.2.6
     , terminal-progress-bar  >=0.4.1    && <0.4.2
-    , text                   >=2.0      && <2.0.1
+    , text                   >=2.0
     , typed-process          ^>=0.2.10.1
     , unliftio               ^>=0.2.22.0
     , uuid                   ^>=1.3.15
     , vector                 ^>=0.13.0.0
+    , yaml                   ^>=0.11.8.0
 
   ghc-options:        -rtsopts -fno-full-laziness -threaded -W -Wextra
   hs-source-dirs:     app lib
@@ -90,3 +91,4 @@ executable test-runner
     TypeApplications
     TypeOperators
     TypeSynonymInstances
+    TemplateHaskell
