--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ experiments/runner/and_common_data.csv
 experiments/runner/exists_data.csv
 experiments/runner/or_data.csv
 experiments/runner/once_data.csv
+experiments/runner/.Rhistory
